--- a/app/frontend/stylesheets/public/3_content_blocks/textbox/image-block.sass
+++ b/app/frontend/stylesheets/public/3_content_blocks/textbox/image-block.sass
@@ -76,6 +76,11 @@
     line-height: 1.6667
     letter-spacing: 0.2px
 
+  br
+    content: ""
+    display: block
+    margin-bottom: 5px
+
 .cb-image-textbox__button
   display: inline-block
   margin-top: 24px
