--- a/app/frontend/stylesheets/public/3_content_blocks/textbox/splash-block.sass
+++ b/app/frontend/stylesheets/public/3_content_blocks/textbox/splash-block.sass
@@ -13,10 +13,11 @@
     justify-content: center
     height: 100%
     padding-bottom: 5vh
+    padding-top: 1vh
 
     @include laptop-or-larger
       justify-content: normal
-      height: calc(100% - 234px)
+      height: calc(100% - 50px)
 
   &__title
     font-size: 3rem
